# nanoGPT-from-scratch

./: .gitignore  README.md  bigram.py  data.py  path_definitions.py  pyproject.toml
src/: data.py  models.py  tokenizer.py
